--- a/TODO
+++ b/TODO
@@ -8,3 +8,5 @@ ___Reminders___:
 ___Log___:
 Login and Signup pages are working.
 Next thing to do is implement Setup pages api communication
+Connectio from mobile client to server was causing package issues, resolved by changing meteor-bundle command (https://blog.meteor.com/leverage-the-power-of-meteor-with-any-client-side-framework-bfb909141008)
+Signup and Login are now unresponsive
